--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: advertisement
-          image: username/advertisement:latest
+          image: 855196134209.dkr.ecr.us-east-1.amazonaws.com/lecture-advertisement/advertisement:latest 
           ports:
             - containerPort: 8080
           resources:
